# MC18

mc18/: CMakeLists.txt
mc18/src/: main.cpp
